--- a/index.html
+++ b/index.html
@@ -28,29 +28,43 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum,
           nisi. At ex similique esse aspernatur.
         </p>
-        <div class="list_color_select">
-          <ul>
-            <li>
-              <span class="dots"></span>
-              <span>Black</span>
-            </li>
-            <li>
-              <span class="dots cl2"></span>
-              <span>Green</span>
-            </li>
-            <li>
-              <span class="dots cl3"></span>
-              <span>Pink</span>
-            </li>
-            <li>
-              <span class="dots cl4"></span>
-              <span>Blue</span>
-            </li>
-            <li>
-              <span class="dots cl5"></span>
-              <span>Yellow</span>
-            </li>
-          </ul>
+        <p class="color-content">Màu sắc:</p>
+        <div class="box-full__content_vector">
+          <div class="box_flex_color">
+            <div class="list_color_select">
+              <ul>
+                <li>
+                  <span class="dots"></span>
+                  <span class="color_name">Đen Sapphire</span>
+                </li>
+                <li>
+                  <span class="dots cl2"></span>
+                  <span class="color_name">Xanh Mint</span>
+                </li>
+                <li>
+                  <span class="dots cl3"></span>
+                  <span class="color_name">Hồng Lilac</span>
+                </li>
+                <li>
+                  <span class="dots cl4"></span>
+                  <span class="color_name">Xanh Iceblue</span>
+                </li>
+                <li>
+                  <span class="dots cl5"></span>
+                  <span class="color_name">Vàng Lemon</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- nút chuyển màu  -->
+          <div class="vector_btn_box">
+            <span id="left-btn"
+              ><img src="./assets/icon/arrow_left.svg" alt=""
+            /></span>
+            <div id="right-btn">
+              <img src="./assets/icon/arrow_right.svg" alt="" />
+            </div>
+          </div>
         </div>
       </div>
       <div class="background_color">
