--- a/index.html
+++ b/index.html
@@ -30,32 +30,34 @@
         </p>
         <p class="color-content">Màu sắc:</p>
         <div class="box-full__content_vector">
-          <div class="box_flex_color">
-            <div class="list_color_select">
-              <ul>
-                <li>
-                  <span class="dots"></span>
-                  <span class="color_name">Đen Sapphire</span>
-                </li>
-                <li>
-                  <span class="dots cl2"></span>
-                  <span class="color_name">Xanh Mint</span>
-                </li>
-                <li>
-                  <span class="dots cl3"></span>
-                  <span class="color_name">Hồng Lilac</span>
-                </li>
-                <li>
-                  <span class="dots cl4"></span>
-                  <span class="color_name">Xanh Iceblue</span>
-                </li>
-                <li>
-                  <span class="dots cl5"></span>
-                  <span class="color_name">Vàng Lemon</span>
-                </li>
-              </ul>
+          <div class="list_color_select">
+            <!-- item1 -->
+            <div class="item_color">
+              <span class="dots cl1"></span>
+              <span class="color_name">Vàng Lemon</span>
+            </div>
+            <!-- item 2 -->
+            <div class="item_color">
+              <span class="dots cl2"></span>
+              <span class="color_name"> Đen Sapphire</span>
+            </div>
+            <!-- item 3 -->
+            <div class="item_color">
+              <span class="dots cl3"></span>
+              <span class="color_name">Xanh Mint</span>
+            </div>
+            <!-- item 4 -->
+            <div class="item_color">
+              <span class="dots cl4"></span>
+              <span class="color_name"> Hồng Lilac</span>
+            </div>
+            <!-- item 5  -->
+            <div class="item_color">
+              <span class="dots cl5"></span>
+              <span class="color_name">Xanh Iceblue</span>
             </div>
           </div>
+
           <!-- nút chuyển màu  -->
           <div class="vector_btn_box">
             <span id="left-btn"
